Andmebaasi ja tabeliloomine

--- a/templates/body.html.twig
+++ b/templates/body.html.twig
@@ -6,18 +6,23 @@
             <form action="/">
                 <hr>
                 <label id="icon" for="name"><i class="fas fa-envelope"></i></label>
-                <input type="text" name="name" id="name" placeholder="Email" required/>
-                <label id="icon" for="name"><i class="fas fa-user"></i></label>
-                <input type="text" name="name" id="name" placeholder="Name" required/>
-                <label id="icon" for="name"><i class="fas fa-unlock-alt"></i></label>
-                <input type="password" name="name" id="name" placeholder="Password" required/>
-                <hr>
-                <div class="gender">
-                    <input type="radio" value="none" id="male" name="gender" checked/>
-                    <label for="male" class="radio">Male</label>
-                    <input type="radio" value="none" id="female" name="gender" />
-                    <label for="female" class="radio">Female</label>
-                </div>
+                <input type="text" name="name" id="name" placeholder="Firstname" required/>
+                <label id="icon" for="name"><i class="fas fa-envelope"></i></label>
+                <input type="text" name="name" id="name" placeholder="Lastname" required/>
+                <label id="icon" for="name"><i class="fas fa-envelope"></i></label>
+                <input type="text" name="name" id="name" placeholder="Phone" required/>
+                <label id="icon" for="name"><i class="fas fa-envelope"></i></label>
+                <input type="text" name="name" id="name" placeholder="Email" required/
+                <label id="icon" for="name"><i class="fas fa-envelope"></i></label>
+                <input type="date" name="name" id="name" placeholder="Birthday" required/>
+                <label id="icon" for="name"><i class="fas fa-envelope">Birthday</i></label>
+                <input type="date" name="name" id="name" placeholder="Start Date" required/>
+                <label id="icon" for="name"><i class="">StartDate</i></label>
+                <input type="date" name="name" id="name" placeholder="End date" required/>
+                <label id="icon" for="name"><i class="fas fa-envelope">End Date</i></label>
+                <input type="text" name="name" id="name" placeholder="Arrival Time" required/>
+                <input type="text" name="name" id="name" placeholder="Number of people" required/>
+                <input type="text" name="name" id="name" placeholder="Payment Method" required/>
                 <hr>
                 <div class="btn-block">
                     <p>By clicking Register, you agree on our <a href="#">Privacy Policy</a>.</p>
